# dwg2dxf

./: .gitignore  CMakeLists.txt  CREDITS-AI  LICENSE  ReadMe.md  batch_list.txt  build.ps1  fix.py  fix_dxf.cpp  fix_dxf.py  fix_textcodec.py  gui.py  memory.md  skill.md  start.bat  start.ps1  write_start.py
dwg2dxf/dwg2dxf/: main.cpp
dwg2dxf/libdxfrw/src/intern/: drw_textcodec.cpp
